--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.41",
     "@tabler/icons-react": "^3.22.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
