--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.0.2",
     "framer-motion": "^11.11.17",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.456.0",
