--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.456.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
+    "react-chatbot-kit": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "tailwind-merge": "^2.5.4",
