--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/react-chartjs": "^3.0.0",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.41",
     "@tabler/icons-react": "^3.22.0",
@@ -25,6 +26,8 @@
     "react-chatbot-kit": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "rechart": "^0.0.1",
+    "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
